deployment/uob-tv-web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uob-tv-web-deployment
  namespace: app-backends
spec:
  selector:
    matchLabels:
      app: uob-tv-web
  replicas: 1
  template:
    metadata:
      namespace: app-backends
      labels:
        app: uob-tv-web
        version: "0.2"
    spec:
      containers:
      - name: uob-tv-web
        image: eu.gcr.io/uob-tv-project-dev/uob-tv-web:0.2
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "192Mi"
            cpu: "200m"
