deployment/uob-tv-web/istio-routing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uob-tv-web-routes
  namespace: app-backends
spec:
  hosts:
  - "www.uob-tv.co.uk"
  - "uob-tv.co.uk"
  gateways:
  - uob-tv-web-gateway
  http:
  - match:
    - uri:
        exact: /
    - uri:
        prefix: /channels
    - uri:
        exact: /my_channel
    - uri:
        prefix: /watch_stream
    - uri:
        prefix: /watch_video
    - uri:
        prefix: /_next
    - uri:
        prefix: /static
    route:
    - destination:
        host: uob-tv-web-service
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: uob-tv-web-destination
  namespace: app-backends
spec:
  host: uob-tv-web
  subsets:
  - name: v1
    labels:
      version: "0.1"
